mot de passe partout

--- a/src/main/java/ulb/mis/view/LoginDoctor.form
+++ b/src/main/java/ulb/mis/view/LoginDoctor.form
@@ -62,9 +62,9 @@
                               <Component id="jLabel2" min="-2" pref="78" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="InamiTextField" min="-2" pref="123" max="-2" attributes="0"/>
-                              <Component id="PasswordTextField" min="-2" pref="123" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="InamiTextField" pref="123" max="32767" attributes="0"/>
+                              <Component id="PasswordTextField" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Component id="jLabelcreatedoctoraccount" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -99,9 +99,8 @@
                   </Group>
                   <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <Component id="PasswordTextField" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" pref="45" max="32767" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="0" pref="67" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="CanceldoctorButton" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
                               <Component id="OkButtondoctor" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
@@ -111,7 +110,10 @@
                           <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <Component id="jLabel3" min="-2" pref="30" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jLabel3" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                              <Component id="PasswordTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -143,8 +145,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="InamiTextField">
-        </Component>
-        <Component class="javax.swing.JTextField" name="PasswordTextField">
         </Component>
         <Component class="javax.swing.Box$Filler" name="filler1">
         </Component>
@@ -180,11 +180,19 @@
             </Property>
             <Property name="text" type="java.lang.String" value="create a new account"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Curseur par d&#xe9;faut"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelcreatedoctoraccountMouseClicked"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JPasswordField" name="PasswordTextField">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jPasswordField1"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PasswordTextFieldActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
