--- a/src/main/java/ulb/mis/view/AddPersonPanel.form
+++ b/src/main/java/ulb/mis/view/AddPersonPanel.form
@@ -141,6 +141,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="jPasswordField1"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jPasswordField1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
