--- a/src/main/java/ulb/mis/view/LoginPatient.form
+++ b/src/main/java/ulb/mis/view/LoginPatient.form
@@ -183,7 +183,7 @@
             </Property>
             <Property name="text" type="java.lang.String" value="create a new account"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Default Cursor"/>
+              <Color id="Curseur par d&#xe9;faut"/>
             </Property>
           </Properties>
           <Events>
