--- a/src/main/java/ulb/mis/view/LoginPatient.form
+++ b/src/main/java/ulb/mis/view/LoginPatient.form
@@ -183,7 +183,7 @@
             </Property>
             <Property name="text" type="java.lang.String" value="create a new account"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Curseur par d&#xe9;faut"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
           <Events>
@@ -191,9 +191,6 @@
           </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="PasswordField">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="jPasswordField1"/>
-          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PasswordFieldActionPerformed"/>
           </Events>
