--- a/src/main/java/ulb/mis/view/AddPersonPanel.form
+++ b/src/main/java/ulb/mis/view/AddPersonPanel.form
@@ -122,8 +122,14 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="familynameTextField">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="NAME"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="firstnameTextField">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Name"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="dateofbirthTextField">
       <Properties>
